[package]
name = "reccon"
version = "0.1.0"
authors = ["liangjs <liangjs@pku.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
petgraph = "0.6.0"

[dev-dependencies]
rand = "0.8.4"
rand_chacha = "0.3.1"